# portfolio

./: README.md
goodluck_english_school/: .env.dev  .gitignore  README.md  pyproject.toml  setup.cfg
goodluck_english_school/design/uml_diagrams/: classes_diagram.puml  er_diagram.puml  use_case_diagram.puml
goodluck_english_school/design/uml_diagrams/activity_diagrams/: lesson_registration.puml
goodluck_english_school/design/uml_diagrams/sequence_diagrams/: purchase_order.puml  subscribe_notifications.puml
goodluck_english_school/design/uml_diagrams/statement_diagrams/: lesson_session.puml  purchase_order.puml
goodluck_english_school/src/english_school/: manage.py
goodluck_english_school/src/english_school/core/: constants.py  mappings.py  mixins.py  models.py  validators.py
goodluck_english_school/src/english_school/english_school/: asgi.py  forms.py  urls.py  views.py  wsgi.py
goodluck_english_school/src/english_school/fixtures/: init_data.json
goodluck_english_school/src/english_school/lessons/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  validators.py  views.py
goodluck_english_school/src/english_school/news/: admin.py  models.py  urls.py  views.py
goodluck_english_school/src/english_school/notifications/: utils.py
goodluck_english_school/src/english_school/orders/: admin.py  constants.py  models.py  urls.py  views.py
goodluck_english_school/src/english_school/pages/: urls.py  views.py
goodluck_english_school/src/english_school/payments/: admin.py  apps.py  constants.py  models.py  signals.py  urls.py  views.py
(+172 files in other folders)
